# smallclaw

./: .env.example  .flake8  .gitignore  CLAUDE.md  asyncio.md  config.yaml  langgraph.json  pyproject.toml
app/agents/: lead_agent.py  socra_agent.py
app/agents/middlewares/: clarification_middleware.py
app/agents/nl2sql_agent/: builder.py  thread_state.py  types.py
app/agents/nl2sql_agent/prompts/: NL2SQL_AGENT_SYSTEM_PROMPT.md
app/agents/nl2sql_agent/tools/: __init__.py  nl2sql_ask_clarification_tool.py  nl2sql_generate_sql_tool.py  query_db_table_tool.py  simple_tools.py
app/agents/prompts/: LEAD_AGENT_SYSTEM_PROMPT.md  NL2SQL_AGENT_SYSTEM_PROMPT.xml  SOCRA_AGENT_SYSTEM_PROMPT.md  template.py
app/agents/socra_agent/: __init__.py  builder.py  nodes.py  tools.py  types.py
app/agents/tools/: simple_tools.py
app/agents/tools/builtins/: clarification_tool.py
app/channels/: feishu.md  feishu.py  manager.py  message_bus.py  service.py  store.py
app/config/: app_config.py  db_config.py  model_config.py  paths.py
app/db/: engine.py  table_definitions.py
app/gateway/: app.py
app/lead_agent/: agent.py
app/lead_agent/graph/: builder.py  nodes.py  types.py
app/lead_agent/prompts/: LEAD_AGENT_CHART_PROMPT.md
app/lead_agent/tools/: tools.py
app/models/: factory.py
lead_agent/: agent.py
