[project]
name = "smallclaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "langchain>=1.2.13",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.3",
    "langgraph-cli[inmem]>=0.4.18",
    "lark-oapi>=1.5.3",
    "python-socks>=2.8.1",
]
